Bug 102328 - GAMMA.DIST function - If x < 0, GAMMA.DIST does not return error.
Summary: GAMMA.DIST function - If x < 0, GAMMA.DIST does not return error.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.3 all versions
Hardware: All All
: medium normal
Assignee: Winfried Donkers
URL:
Whiteboard: target:5.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-21 15:14 UTC by raal
Modified: 2016-10-18 14:44 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description raal 2016-09-21 15:14:56 UTC
GAMMA.DIST function - specification of the function: https://support.office.com/en-US/article/GAMMA-DIST-function-9B6F1538-D11C-4D5F-8966-21F6A2201DEF

Remark: If x < 0, GAMMA.DIST returns the #NUM! error value.
Formula =GAMMA.DIST(-2,1,1,1) returns 0, should return #error
Comment 1 Julien Nabet 2016-09-21 18:50:31 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.

Winfried: one for you?
Comment 2 Winfried Donkers 2016-09-22 05:50:31 UTC
@Julien: Raal created the bug report after communicating with me; you were faster than I was ;-)
Comment 3 Eike Rathke 2016-10-13 18:14:34 UTC
Actually not inherited from OOo because the GAMMA.DIST function didn't exist back then.. apparently confused with the GAMMADIST function. GAMMA.DIST was introduced with 4.3
Comment 4 Commit Notification 2016-10-13 18:19:23 UTC
Winfried Donkers committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=52c79bbd1b4c58124738b59214a3f2b111ff0191

tdf#102328 Add constraint for argument X in Calc function GAMMA.DIST.

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.