tdf#102328 Add constraint for argument X in Calc function GAMMA.DIST.

Change-Id: I5702cabac8f1e331072acfe25581569f3b7f64cc