sc/source/core/inc/interpre.hxx
@@ -855,7 +855,7 @@ void ScFisher();
 void ScFisherInv();
 void ScFact();
 void ScNormDist( int nMinParamCount );
-void ScGammaDist( int nMinParamCount );
+void ScGammaDist( bool bODFF );
 void ScGammaInv();
 void ScExpDist();
 void ScBinomDist();
